<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/rlt_update_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="头像"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_def_icon" />
        </RelativeLayout>

        <View style="@style/Divide.Default" />

        <com.xsl.secondhand.widget.SettingItemView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/username"
            app:rightText="Airsaid"
            app:rightTextColor="#977F8A"
            app:textColor="@android:color/black" />

        <View style="@style/Divide.Default" />

        <com.xsl.secondhand.widget.SettingItemView
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/sex"
            app:rightText="男"
            app:rightTextColor="#977F8A"
            app:textColor="@android:color/black" />

        <View style="@style/Divide.Default" />

        <com.xsl.secondhand.widget.SettingItemView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/phone"
            app:rightText="18"
            app:rightTextColor="#977F8A"
            app:textColor="@android:color/black" />

        <View style="@style/Divide.Default" />

        <com.xsl.secondhand.widget.SettingItemView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/email"
            app:rightText="18"
            app:rightTextColor="#977F8A"
            app:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_exist"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="退出登录"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>